--- a/todo_project/src/App.css
+++ b/todo_project/src/App.css
@@ -48,8 +48,9 @@ h1 {
   margin-top: 1rem;
   margin-bottom: 2rem;
   width: 300px;
-  color: var(--white);
+  color: var(--brown);
   border-radius: 5px;
+  font-weight: bold;
 }
 
 .todo-input::placeholder {
