--- a/todo_project/src/App.css
+++ b/todo_project/src/App.css
@@ -77,13 +77,19 @@ h1 {
   align-items: center;
   background: var(--brown);
   color: #fff;
-  padding: 0.75rem 1rem;
-  border-radius: 5px;
+  padding: 0.07rem 0.75rem;
+  border-radius: 10px;
   margin-bottom: 1rem;
+}
+.Todo p{
+  padding: 20px 30px;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 .fa-trash {
   margin-left: 0.75rem;
+  
 }
 
 .incompleted {
@@ -100,5 +106,7 @@ h1 {
 .edit-icon,
 .delete-icon {
   cursor: pointer;
+  font-size: 20px;
+  padding: 10px;
 }
  
