--- a/src/App.css
+++ b/src/App.css
@@ -146,3 +146,34 @@ h1 {
   }
 }
 
+@media (max-width: 375px){
+    .TodoWrapper {
+      width: 80%;
+      padding: 30px;
+      margin-inline:  5px ;
+    }
+    .TodoForm {
+      width: 100%;
+      margin-bottom: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+    }
+    
+    .todo-input {
+      width: 62%;
+      padding: 0;
+      margin: 0;
+      padding: 5px 10px;
+    }
+    
+    
+    .todo-btn {
+      width: 35%;
+      padding: 0;
+      padding: 5px 10px;
+      margin: 0;
+      text-align: center;
+    }
+}
