--- a/src/App.css
+++ b/src/App.css
@@ -133,14 +133,17 @@ h1 {
     width: 65%;
     padding: 0;
     margin: 0;
-    padding: 10px 20px;
+    padding: 5px 10px;
+  }
+  .todo-input::placeholder {
+    font-size: 12px;
   }
   
   
   .todo-btn {
     width: 35%;
     padding: 0;
-    padding: 10px 20px;
+    padding: 5px 10px;
     margin: 0;
     text-align: center;
   }
@@ -167,6 +170,10 @@ h1 {
       margin: 0;
       padding: 5px 10px;
     }
+    .todo-input::placeholder {
+      font-size: 12px;
+    }
+    
     
     
     .todo-btn {
